--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.posturealert.smartchair" >
+    package="com.posturealert.smartchair">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
         <activity
-            android:name="com.posturealert.smartchair.MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        android:name=".Dashboard"
+        android:label="@string/title_activity_dashboard"
+        android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Index"
+            android:label="@string/title_activity_index"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
-        <activity android:name="com.posturealert.smartchair.LoginActivity" android:theme="@style/AppTheme.Dark" />
-        <activity android:name="com.posturealert.smartchair.SignupActivity" android:theme="@style/AppTheme.Dark" />
-    </application>
+        <activity
+        android:name=".Main"
+        android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar"/>
+    <activity android:name=".LoginActivity" android:theme="@style/AppTheme.Dark">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-</manifest>
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
+    <activity android:name=".SignupActivity" android:theme="@style/AppTheme.Dark" />
+
+
+
+
+</application>
+
+    </manifest>
