--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:largeHeap="true">
+
+
         <activity
             android:name=".Dashboard"
             android:label="@string/title_activity_dashboard"
@@ -17,7 +20,7 @@
         <activity
             android:name=".Index"
             android:label="@string/title_activity_index"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Main"
             android:label="@string/app_name"
@@ -58,6 +61,10 @@
         <activity
             android:name=".UserInfo"
             android:label="@string/title_activity_user_info"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Train"
+            android:label="@string/title_activity_train"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
